[refactor] add getRefDependencies